Implemetação do OAuth

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,10 @@
 spring.jpa.show-sql=true
-security.oauth2.client.scope=
-security.oauth2.client.client-secret=
-security.oauth2.client.client-id=
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=sa
+spring.datasource.password=test
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+security.oauth2.client.scope=application
+security.oauth2.client.client-id=0073c255-02ca-43b6-9f55-862add0725df
+security.oauth2.client.client-secret=7eb20485-110c-4087-905d-eb70f50e658d
+security.oauth2.client.access-token-validity-seconds=86400
